feat: additional default ignore users

--- a/settings.toml
+++ b/settings.toml
@@ -4,6 +4,14 @@ ignore = [
     "systemd-resolve",
     "systemd-oom",
     "systemd-timesync",
+    "messagebus",
+    "polkitd",
+    "nvidia-persistenced",
+    "syslog",
+    "avahi",
+    "xrdp",
+    "rtkit",
+    "sshd"
 ]
 
 [watchers.cpu]
